<resources>
    <string name="app_name">SUSI.AI</string>
    <string name="action_about_us">About Us</string>
    <string name="action_help">Help</string>
    <string name="action_log_out">Log out</string>
    <string name="action_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_wall_settings">Wallpaper</string>
    <string name="used_voice" translatable="false">Used Voice before?</string>
    <string name="voice_welcome">Hi! How can I help you?</string>
    <string name="background_no_wall">no_wall</string>
    <string name="content">content</string>
    <string name="dialog_retrieve_messages_title">Retrieving old messages…</string>
    <string name="dialog_cancel_sign_up">Cancel sign up?</string>
    <string name="dialog_skip_sign_up">Skip Sign Up?</string>
    <string name="email_invalid">The e-mail address you entered doesn\'t belong to an account. Please check your e-mail and try again.</string>
    <string name="enter_send" translatable="false">Enter_send</string>
    <string name="error_cancelling_signUp_process_text">This will cancel the sign up process.</string>
    <string name="error_email">E-mail address already exists</string>
    <string name="error_msg">Please use the \"Forgot password?\" option to reset your password</string>
    <string name="error_skipping_signUp_process_text">This will cancel the sign up process and redirect you to chat page.</string>
    <string name="unactivate_user">Account Not Active</string>
    <string name="error_unactivated_user_message">Please check your email to activate your account. If not found, check spams folder.</string>
    <string name="exit">Press again to exit</string>
    <string name="forgot_password_mail_sent">E-mail sent</string>
    <string name="hint_voice_input">Say Something…</string>
    <string name="hotword_success">Hotword detected</string>
    <string name="chat_search_status">Search Not Found</string>
    <string name="id">ID</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_privacy">Privacy</string>
    <string name="menu_top_rated">Top Rated</string>
    <string name="menu_a_to_z">Name(A-Z)</string>
    <string name="menu_most_rated">Most Rated</string>
    <string name="menu_newly_created">Newly Created</string>
    <string name="menu_recently_updated">Recently Updated</string>
    <string name="menu_feedback_count">Feedback Count</string>
    <string name="menu_week_usage">This Week Usage</string>
    <string name="menu_month_usage">This Month Usage</string>
    <string name="menu_ascending">Ascending</string>
    <string name="menu_descending">Descending</string>
    <string name="sort_by">Sort by..</string>
    <string name="message_copied">Message copied</string>
    <string name="no_internet_connection">Internet Connection Not Available.</string>
    <string name="not_found">Not Found</string>
    <string name="nothing_down_matches_your_query">Nothing below matching your query</string>
    <string name="nothing_up_matches_your_query">Nothing above matching your query</string>
    <string name="password_invalid">The password you entered is incorrect. Please try again.</string>
    <string name="password_invalid_title">Invalid Password</string>
    <string name="email_not_registered">The email you entered is not registered with us. Please try again.</string>
    <string name="email_not_registered_title">Email Registration</string>
    <string name="search">Search</string>
    <string name="voice_search">Voice Search</string>
    <string name="select_background">Select background</string>
    <string name="send_message">Sending the message</string>
    <string name="send_msg_hint">Ask SUSI something…</string>
    <string name="server_pref">Select server</string>
    <string name="server_select_summary">Select backend server for the app.</string>
    <string name="server_settings_title">Server settings</string>
    <string name="settings_title">Chat settings</string>
    <string name="signup">Thank you for Signing Up</string>
    <string name="signup_msg">An e-mail has been sent to the provided address. Please use the
        confirmation link to activate your account and sign in to SUSI.</string>
    <string name="updated_successfully">updated.</string>
    <string name="websearchnull">No Result Found</string>
    <string name="hello_world">Hello world!</string>
    <string name="know_more">Know more</string>
    <string name="activity_executed_key" translatable="false">activity_executed</string>
    <string name="anonymous_logged_in_key" translatable="false">anonymous_logged_in</string>
    <string name="susi_server_selected_key" translatable="false">is_susi_server_selected</string>
    <string name="hotword_detection_key" translatable="false">hotword_detection</string>
    <string name="notify_user_key" translatable="false">notify_user</string>
    <string name="setting_mic_input">Mic input</string>
    <string name="setting_hotword_detection">Hotword Detection (Beta)</string>
    <string name="setting_mic_key" translatable="false">mic_input</string>
    <string name="setting_hotword_key" translatable="false">hotword_detection</string>
    <string name="settings_enterPreference_key" translatable="false">enter_send</string>
    <string name="settings_enterPreference_label">↵ to send</string>
    <string name="settings_enterPreference_summary">Send message by clicking ↵ on the keyboard</string>
    <string name="settings_hotwordPreference_summary">Enable \"Hotword Detection\" to interact with SUSI in hands-free mode</string>
    <string name="settings_micPreference_summary">Enable mic to give voice input</string>
    <string name="settings_speechAlwaysPreference_summary">Enable speech output regardless of input type</string>
    <string name="settings_speechAlways_key" translatable="false">speech_always</string>
    <string name="settings_speechAlways_label">Speech output always on</string>
    <string name="settings_speechPreference_key" translatable="false">speech_output</string>
    <string name="settings_speechPreference_label">Speech output</string>
    <string name="settings_speechPreference_summary">Enable speech output only for speech input</string>
    <string name="speech_not_supported">Sorry, your device doesn\'t support speech input</string>
    <string name="speech_prompt">Say something…</string>
    <string name="tap_on_mic">Tap the mic icon to speak</string>
    <string name="settings_deviceSection_key" translatable="false">device_section</string>
    <string name="settings_displayEmail_key" translatable="false">display_email</string>
    <string name="settings_about_us">About Us</string>
    <string name="settings_about_us_key">about_us</string>
    <string name="settings_visit_website">Visit Website</string>
    <string name="settings_visit_website_key" translatable="false">visit_website</string>
    <string name="error_crop_not_supported">Sorry - your device doesn\'t support the crop action.</string>
    <string name="error_hotword">Sorry, hotword detection is not supported on your device.</string>
    <string name="error_internet_connectivity">Internet Connectivity Problem.</string>
    <string name="error_invalid_token">Invalid Access Token.</string>
    <string name="error_occurred_try_again">An error occurred. please try again.</string>
    <string name="error_rating">Unable to rate skill. An error occurred.</string>
    <string name="no_skill_name">Name not available</string>
    <string name="no_skill_description">No description available</string>
    <string name="skill_unrated">Skill not rated yet</string>
    <string name="skill_not_found">No skill found yet</string>
    <string name="skill_empty">Skills to be fetched. Try again later</string>
    <string name="error_voice_search">Sorry, your device does not support voice actions.</string>
    <string name="error_voice_chat_search">Error occured while doing voice search.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="copy_items">Copy</string>
    <string name="current_password">Current Password</string>
    <string name="dialog_action_complete">Complete Action Using</string>
    <string name="sign_up">SIGN UP</string>
    <string name="Language">Language</string>
    <string name="settings_mic">Mic settings</string>
    <string name="settings_misc">Miscellaneous</string>
    <string name="settings_speech">Speech settings</string>
    <string name="cancel">Cancel</string>
    <string name="pref_rate_summary">Rate the SUSI App on the Google Play store</string>
    <string name="pref_rate_title">Rate SUSI</string>
    <string name="pref_share_summary">Share the SUSI app with your friends.</string>
    <string name="pref_share_title">Share SUSI</string>
    <string name="reset">Reset password</string>
    <string name="connect_to_susi">To start the configuration process, plug in your SUSI.AI smart device and wait for the \“Ping\” sound. The SUSI.AI device will automatically open a Wi-Fi hotspot. Please connect your phone to the wireless network with the name \“SUSI.AI\”.</string>
    <string name="cannot_connect_button">I cannot connect</string>
    <string name="connected_to_susiai">Connected to SUSI.AI WiFi</string>
    <string name="help_open_setting">How to open \'Settings\'?</string>
    <string name="help_open_setting_desc">In the main page click on SUSI logo present at the top right corner. This will open a page. Click on the 3 dot present at top right corner. From the menu that open click on \'Settings\'</string>
    <string name="help_signup">How to SignUp in SUSI.AI?</string>
    <string name="help_signup_desc">In the Login page click on \'Sign Up for SUSI\'.\n * Enter your email address.\n * Enter your password and confirm it\n After this click on \'SIGN UP\'</string>
    <string name="help_change_password">How to change Password?</string>
    <string name="help_change_password_desc"> * Open the \'Settings\' page.\n * Scroll down and click on \'Reset Password\'.\n * Enter your current password and after that entire your new password. \n * Click on \'OK\'.</string>
    <string name="help_report_issue">How to report an issue?</string>
    <string name="help_report_issue_desc">Open the \'About Us\' page. Under the \'Report Issues\' section click on  \'Github Repository Issue Tracker\'. This will redirect you to a webpage where you can put up your issue by clicking on \'New Issue\'.</string>
    <string name="help_login">How to login, if you have opened SUSI without logging in?</string>
    <string name="help_login_desc">Open \'Settings\' page and scroll down to the bottom. Click on \'Login\'. This will redirect you to the login page.</string>
    <string name="help_susi_voice">How to use SUSI voice?</string>
    <string name="help_susi_voice_desc">To use SUSI voice click on the microphone symbol present in the bottom right corner of the chats page. You can ask anything to SUSI here. To change various voice settings, go to Settings page and configure SUSI voice accordingly.</string>
    <string name="help_susi_skills">What skills do SUSI have?</string>
    <string name="help_susi_skills_desc">To know about the skills that SUSI posses move to \'SUSI.AI Skills\' page. You can reach there just by clicking on the \'SUSI\' logo present at the top right corner of the Chat page.</string>
    <string name="linked_account">Linked account</string>
    <string name="name">Name</string>
    <string name="room_heading">Room</string>
    <string name="location">Location</string>
    <string name="mac_address">Mac Address</string>
    <string name="save">Save</string>
    <string name="change_spk_name">Enter the new name of your speaker and press \'Save\' button to use it.</string>
</resources>