<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <com.takisoft.fix.support.v7.preference.PreferenceCategory android:title="@string/server_settings_title">
        <android.support.v7.preference.PreferenceScreen
            android:key="Server_Select"
            android:summary="@string/server_select_summary"
            android:title="@string/server_pref" />
    </com.takisoft.fix.support.v7.preference.PreferenceCategory>

    <com.takisoft.fix.support.v7.preference.PreferenceCategory android:title="@string/settings_title">
        <android.support.v7.preference.SwitchPreferenceCompat
            android:id="@+id/enter_key_pref"
            android:defaultValue="true"
            android:key="@string/settings_enterPreference_key"
            android:summary="@string/settings_enterPreference_summary"
            android:title="@string/settings_enterPreference_label" />
    </com.takisoft.fix.support.v7.preference.PreferenceCategory>

    <com.takisoft.fix.support.v7.preference.PreferenceCategory android:title="@string/settings_mic">
        <android.support.v7.preference.SwitchPreferenceCompat
            android:id="@+id/mic_input"
            android:defaultValue="true"
            android:key="@string/setting_mic_key"
            android:summary="@string/settings_micPreference_summary"
            android:title="@string/setting_mic_input" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:id="@+id/hotword_detection"
            android:defaultValue="false"
            android:key="@string/setting_hotword_key"
            android:summary="@string/settings_hotwordPreference_summary"
            android:title="@string/setting_hotword_detection" />
    </com.takisoft.fix.support.v7.preference.PreferenceCategory>

    <com.takisoft.fix.support.v7.preference.PreferenceCategory android:title="@string/settings_speech">
        <android.support.v7.preference.SwitchPreferenceCompat
            android:id="@+id/speech_pref"
            android:defaultValue="true"
            android:key="@string/settings_speechPreference_key"
            android:summary="@string/settings_speechPreference_summary"
            android:title="@string/settings_speechPreference_label" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:id="@+id/speech_always"
            android:defaultValue="false"
            android:key="@string/settings_speechAlways_key"
            android:summary="@string/settings_speechAlwaysPreference_summary"
            android:title="@string/settings_speechAlways_label" />
    </com.takisoft.fix.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.ListPreference
        android:entries="@array/languagentries"
        android:entryValues="@array/languagentry"
        android:key="Lang_Select"
        android:title="@string/Language" />

    <com.takisoft.fix.support.v7.preference.PreferenceCategory android:title="@string/settings_misc">

        <android.support.v7.preference.PreferenceScreen
            android:key="rate"
            android:summary="@string/pref_rate_summary"
            android:title="@string/pref_rate_title" />

        <android.support.v7.preference.PreferenceScreen
            android:key="share"
            android:summary="@string/pref_share_summary"
            android:title="@string/pref_share_title" />

        <android.support.v7.preference.PreferenceScreen
            android:key="reset_password"
            android:title="@string/reset" />

        <android.support.v7.preference.PreferenceScreen
            android:key="login_logout"
            android:title="Login" />

    </com.takisoft.fix.support.v7.preference.PreferenceCategory>


</android.support.v7.preference.PreferenceScreen>