<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="200"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/down_angle"
        android:icon="@drawable/ic_arrow_down_24dp"
        android:title="Search Down"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/up_angle"
        android:icon="@drawable/ic_arrow_up_24dp"
        android:title="Search Up"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/wall_settings"
        android:orderInCategory="100"
        android:title="@string/action_wall_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="101"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="102"
        android:title="@string/action_log_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_login"
        android:orderInCategory="102"
        android:title="@string/action_login"
        app:showAsAction="never" />
</menu>
