<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_moderate"
    android:layout_marginBottom="@dimen/margin_moderate"
    android:orientation="vertical"
    tools:context="org.fossasia.susi.ai.skills.help.HelpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/help_image_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/margin_top"
                android:layout_marginRight="@dimen/margin_top"
                android:background="@drawable/help"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/padding_extra_extra_extra_large"
                android:text="Help"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_extra_extra_extra_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_moderate"
                android:paddingLeft="@dimen/padding_moderate"
                android:paddingRight="@dimen/padding_moderate"
                android:text="@string/help_open_setting"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_moderate"
                android:paddingRight="@dimen/padding_moderate"
                android:text="@string/help_open_setting_desc"
                android:textSize="@dimen/text_size_medium" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_moderate"
                android:paddingLeft="@dimen/padding_moderate"
                android:paddingRight="@dimen/padding_moderate"
                android:text="@string/help_signup"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_moderate"
                android:paddingRight="@dimen/padding_moderate"
                android:text="@string/help_signup_desc"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_moderate"
                android:paddingLeft="@dimen/padding_moderate"
                android:paddingRight="@dimen/padding_moderate"
                android:text="@string/help_change_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_moderate"
                android:paddingRight="@dimen/padding_moderate"
                android:text="@string/help_change_password_desc"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_moderate"
                android:paddingLeft="@dimen/padding_moderate"
                android:paddingRight="@dimen/padding_moderate"
                android:text="@string/help_report_issue"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_moderate"
                android:paddingRight="@dimen/padding_moderate"
                android:text="@string/help_report_issue_desc"
                android:textSize="@dimen/text_size_medium" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_moderate"
                android:paddingLeft="@dimen/padding_moderate"
                android:paddingRight="@dimen/padding_moderate"
                android:text="@string/help_login"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_moderate"
                android:paddingRight="@dimen/padding_moderate"
                android:text="@string/help_login_desc"
                android:textSize="@dimen/text_size_medium" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_moderate"
                android:paddingLeft="@dimen/padding_moderate"
                android:paddingRight="@dimen/padding_moderate"
                android:text="@string/help_susi_voice"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_moderate"
                android:paddingRight="@dimen/padding_moderate"
                android:text="@string/help_susi_voice_desc"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_moderate"
                android:paddingLeft="@dimen/padding_moderate"
                android:paddingRight="@dimen/padding_moderate"
                android:text="@string/help_susi_skills"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_moderate"
                android:paddingRight="@dimen/padding_moderate"
                android:text="@string/help_susi_skills_desc"
                android:textSize="@dimen/text_size_medium" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
