<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/margin_moderate"
        android:text="@string/connect_to_susi"
        android:textSize="@dimen/text_size_moderate"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extremely_large"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_moderate"
            android:layout_marginRight="@dimen/margin_moderate"
            android:layout_weight="2"
            android:textSize="@dimen/text_size_moderate"
            android:id="@+id/cannot_connect_susiai"
            android:background="@color/colorPrimary"
            android:text="@string/cannot_connect_button"
            android:textAllCaps="false"
            android:textColor="@color/md_white_1000" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_moderate"
            android:layout_weight="3"
            android:id="@+id/connected_susiai"
            android:textSize="@dimen/text_size_moderate"
            android:background="@color/colorPrimary"
            android:text="@string/connected_to_susiai"
            android:textColor="@color/md_white_1000"
            android:textAllCaps="false"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:background="@color/colorPrimary"
        android:id="@+id/cancel_susiai_connection"
        android:text="@string/cancel"
        android:textSize="@dimen/text_size_moderate"
        android:textAllCaps="false"
        android:textColor="@color/md_white_1000" />

</LinearLayout>