<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_extremely_large"
        android:layout_weight="10"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:text="@string/change_spk_name"
            android:textSize="@dimen/text_size_medium" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/name_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/name_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/margin_moderate"
            android:layout_marginRight="@dimen/margin_extremely_large"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/name_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginLeft="@dimen/margin_extremely_large"
            android:layout_marginRight="@dimen/margin_moderate"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>
</LinearLayout>